Feat: Authentication, Authorization

--- a/GUI/appsettings.json
+++ b/GUI/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BLLUrl": "https://localhost:6001/api/",
+  "BLLFileUrl": "https://localhost:6001/"
 }
