--- a/REPOSITORY/REPOSITORY.csproj
+++ b/REPOSITORY/REPOSITORY.csproj
@@ -13,6 +13,9 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.7" />
       <PackageReference Include="Stax.AutoDependencyInjectionRegistration" Version="3.1.1" />
     </ItemGroup>
 
