Feat: Change shift entity

--- a/BLL/appsettings.json
+++ b/BLL/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=TICAN-PC\\SQLEXPRESS; Initial Catalog=SNHCenter; TrustServerCertificate=True; User=tican; Password=Tican1003@"
+  }
 }
