--- a/BLL/appsettings.Development.json
+++ b/BLL/appsettings.Development.json
@@ -10,6 +10,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TICAN-PC\\SQLEXPRESS; Initial Catalog=SNHCenter; TrustServerCertificate=True; User=tican; Password=Tican1003@"
+    "DefaultConnection": "Data Source=snhcenter.c1ywo4sga5tz.ap-southeast-1.rds.amazonaws.com; Initial Catalog=SNHCenter; TrustServerCertificate=True; User=tican; Password=Tican1003200210331"
   }
 }
