--- a/REPOSITORY/REPOSITORY.csproj
+++ b/REPOSITORY/REPOSITORY.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Stax.AutoDependencyInjectionRegistration" Version="3.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="System\Menu\" />
+    </ItemGroup>
+
 </Project>
