--- a/BLL/appsettings.json
+++ b/BLL/appsettings.json
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=snhcenter.c1ywo4sga5tz.ap-southeast-1.rds.amazonaws.com; Initial Catalog=SNHCenter; TrustServerCertificate=True; User=tican; Password=Tican1003200210331"
+    "DefaultConnection": "Data Source=113.169.12.210,1433; Initial Catalog=SNHCenter; TrustServerCertificate=True; User=tican; Password=Tican100302@"
   }
 }
