--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -15,6 +15,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Stax.AutoDependencyInjectionRegistration" Version="3.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
