--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.Runtime.Caching" Version="8.0.0" />
     </ItemGroup>
