Feat: Add teacher management

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -27,4 +27,9 @@
       <ProjectReference Include="..\REPOSITORY\REPOSITORY.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\Management\" />
+      <Folder Include="Controllers\Training\" />
+    </ItemGroup>
+
 </Project>
