--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -14,6 +14,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Toolbelt.EntityFrameworkCore.IndexAttribute" Version="5.0.1.1" />
     </ItemGroup>
 
     <ItemGroup>
