--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -18,4 +18,9 @@
       <ProjectReference Include="..\DTO\DTO.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\Management\" />
+      <Folder Include="Controllers\Training\" />
+    </ItemGroup>
+
 </Project>
