--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Controllers\Base\" />
         <Folder Include="Controllers\Management\"/>
         <Folder Include="Middleware\"/>
     </ItemGroup>
