--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -18,9 +18,19 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
+    "ngx-bootstrap": "^18.0.2",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
+    "popper.js": "^1.16.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.0-beta.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -30,15 +40,12 @@
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
-    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
     "typescript": "~5.5.2"
   }
 }
